image alignment fix

--- a/app/styles/mailchimp.css
+++ b/app/styles/mailchimp.css
@@ -31,3 +31,8 @@
 #mc_embed_signup #mce-error-response{
   color: #303030;
 }
+
+#mc_embed_signup div.response {
+ width:100%;
+ text-align:center;
+}
