--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -426,7 +426,7 @@ h3.sub_heading span {
   }
   img {
     max-width: 150%;
-    margin-left: -25%;
+    margin-left: -23.5%;
   }
   .small-img {
     width: 100%;
